# agentic-ats

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
ats/: __init__.py  cli.py  config.py  cost.py  db.py  invoke.py  logging.py  orchestrator.py  storage.py  worker.py
ats/agents/: __init__.py  definitions.py  schemas.py
ats/storage/: __init__.py  audit_chain.py  blob.py  db.py  files.py  models.py  uow.py
ats/storage/repositories/: __init__.py  audit_log.py  audits.py  base.py  candidates.py  comments.py  decisions.py  memberships.py  orgs.py  runs.py  scores.py  sessions.py  shortlists.py  users.py
ats/tools/: __init__.py  db_tools.py  pdf_tools.py  skills_index.py
dashboard/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/(protected)/: layout.tsx
dashboard/src/app/(protected)/runs/: page.tsx
dashboard/src/app/(protected)/runs/[id]/: page.tsx
dashboard/src/app/(protected)/runs/new/: page.tsx
dashboard/src/app/(protected)/settings/audit/: page.tsx
dashboard/src/app/(protected)/settings/orgs/: page.tsx
dashboard/src/app/api/audit/export/: route.ts
dashboard/src/app/api/audit/verify/: route.ts
dashboard/src/app/api/auth/login/: route.ts
dashboard/src/app/api/comments/: route.ts
dashboard/src/app/api/decisions/: route.ts
dashboard/src/app/login/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/components/: AuditVerifyButton.tsx  CandidateSummary.tsx  CandidateViews.tsx  CommentThread.tsx  DecisionPanel.tsx  JdDownloadLink.tsx  OrgSwitcher.tsx  PipelineProgress.tsx  ResumeDownload.tsx  RunJobDescription.tsx  RunStatusPoller.tsx  StatusBadge.tsx  ThemeToggle.tsx
dashboard/src/lib/: audit-chain.ts  audit.ts  auth.ts  blob.ts  db.ts  redirect.ts  repo.ts  run-events.ts  schema.ts  session.ts  types.ts
docs/superpowers/specs/: 2026-04-29-dashboard-design.md
tests/: conftest.py
tests/fixtures/: jd_ai.txt
tests/integration/: fakes.py  test_pipeline_e2e.py
tests/storage/: fakes.py  test_repositories.py
tests/unit/: test_agents_registry.py  test_db.py  test_orchestrator_helpers.py  test_pdf_tools.py  test_schemas.py  test_skills_index.py  test_storage.py
(+8 files in other folders)
